<resources>
  <string name="app_name">Haptik SDK Demo</string>
  <string name="show_saved_cards">Show Saved Cards</string>
  <string name="show_wallet">Show Wallet</string>
  <string name="show_wallet_history">Wallet History</string>
  <string name="show_transactions">Get Transactions</string>
  <string name="menu_add_address">Add an Address</string>
  <string name="menu_delete_addresses">Delete Addresses</string>
  <string name="menu_toggle_banner_visibility">Toggle Banners display</string>
  <string name="unread_count">Unread Chats : %d</string>
  <string name="menu_logout">Logout</string>
  <string name="client_screen_message">This page imitates potential main screen of client app</string>
  <string name="client_signup_screen_message">This page imitates potential signup screen of client app</string>
  <string name="launch_haptik">Launch Haptik Inbox</string>
  <string name="logout_success">Logout Success!</string>
  <string name="logout_failure">Logout failure!</string>
  <string name="launch_signup">Launch Signup</string>
  <string name="signup_screen">Haptik SDK Signup</string>
</resources>